<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="#0099ff">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_up_here"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/second_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">


        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="44dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText11"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText11"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText12"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText4"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="#0091EA"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText12" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="#0099FF"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>